pythonscript/cffi_bindings/cdef.gen.h

typedef bool godot_bool;
typedef int godot_int;
typedef float godot_real;
typedef void godot_object;
typedef struct godot_string
{
  uint8_t _dont_touch_that[8];
} godot_string;
typedef struct godot_vector2
{
  uint8_t _dont_touch_that[8];
} godot_vector2;
typedef struct godot_rect2
{
  uint8_t _dont_touch_that[16];
} godot_rect2;
void godot_rect2_new(godot_rect2 *p_rect);
godot_vector2 *godot_rect2_get_size(godot_rect2 *p_rect);
void godot_rect2_set_size(godot_rect2 *p_rect, const godot_vector2 *p_size);
typedef struct godot_vector3
{
  uint8_t _dont_touch_that[12];
} godot_vector3;
typedef struct godot_basis
{
  uint8_t _dont_touch_that[36];
} godot_basis;
typedef struct godot_quat
{
  uint8_t _dont_touch_that[16];
} godot_quat;
typedef struct godot_plane
{
  uint8_t _dont_touch_that[16];
} godot_plane;
void godot_plane_new_with_normal(godot_plane *p_pl, const godot_vector3 *p_normal, const godot_real p_d);
void godot_plane_set_normal(godot_plane *p_pl, const godot_vector3 *p_normal);
godot_vector3 godot_plane_get_normal(const godot_plane *p_pl);
godot_real godot_plane_get_d(const godot_plane *p_pl);
void godot_plane_set_d(godot_plane *p_pl, const godot_real p_d);
typedef struct godot_transform
{
  uint8_t _dont_touch_that[48];
} godot_transform;
void godot_transform_new(godot_transform *p_trans);
godot_basis *godot_transform_get_basis(godot_transform *p_trans);
godot_vector3 *godot_transform_get_origin(godot_transform *p_trans);
typedef struct godot_array
{
  uint8_t _dont_touch_that[8];
} godot_array;
typedef struct godot_variant
{
  uint8_t _dont_touch_that[24];
} godot_variant;
typedef struct godot_dictionary
{
  uint8_t _dont_touch_that[8];
} godot_dictionary;
void godot_dictionary_new(godot_dictionary *p_dict);
void godot_dictionary_clear(godot_dictionary *p_dict);
godot_bool godot_dictionary_empty(const godot_dictionary *p_dict);
void godot_dictionary_erase(godot_dictionary *p_dict, const godot_variant *p_key);
godot_bool godot_dictionary_has(const godot_dictionary *p_dict, const godot_variant *p_key);
godot_bool godot_dictionary_has_all(const godot_dictionary *p_dict, const godot_array *p_keys);
uint32_t godot_dictionary_hash(const godot_dictionary *p_dict);
godot_array godot_dictionary_keys(const godot_dictionary *p_dict);
godot_variant *godot_dictionary_operator_index(godot_dictionary *p_dict, const godot_variant *p_key);
godot_int godot_dictionary_size(const godot_dictionary *p_dict);
godot_string godot_dictionary_to_json(const godot_dictionary *p_dict);
godot_array godot_dictionary_values(const godot_dictionary *p_dict);
void godot_dictionary_destroy(godot_dictionary *p_dict);
typedef struct godot_node_path
{
  uint8_t _dont_touch_that[8];
} godot_node_path;
void godot_node_path_new(godot_node_path *p_np, const godot_string *p_from);
godot_string godot_node_path_get_name(const godot_node_path *p_np, const godot_int p_idx);
godot_int godot_node_path_get_name_count(const godot_node_path *p_np);
godot_string godot_node_path_get_subname(const godot_node_path *p_np, const godot_int p_idx);
godot_int godot_node_path_get_subname_count(const godot_node_path *p_np);
godot_bool godot_node_path_is_absolute(const godot_node_path *p_np);
godot_bool godot_node_path_is_empty(const godot_node_path *p_np);
godot_string godot_node_path_as_string(const godot_node_path *p_np);
void godot_node_path_destroy(godot_node_path *p_np);
typedef struct godot_rid
{
  uint8_t _dont_touch_that[8];
} godot_rid;
void godot_rid_new(godot_rid *p_rid, godot_object *p_from);
typedef enum godot_variant_type {GODOT_VARIANT_TYPE_NIL, GODOT_VARIANT_TYPE_BOOL, GODOT_VARIANT_TYPE_INT, GODOT_VARIANT_TYPE_REAL, GODOT_VARIANT_TYPE_STRING, GODOT_VARIANT_TYPE_VECTOR2, GODOT_VARIANT_TYPE_RECT2, GODOT_VARIANT_TYPE_VECTOR3, GODOT_VARIANT_TYPE_TRANSFORM2D, GODOT_VARIANT_TYPE_PLANE, GODOT_VARIANT_TYPE_QUAT, GODOT_VARIANT_TYPE_RECT3, GODOT_VARIANT_TYPE_BASIS, GODOT_VARIANT_TYPE_TRANSFORM, GODOT_VARIANT_TYPE_COLOR, GODOT_VARIANT_TYPE_IMAGE, GODOT_VARIANT_TYPE_NODE_PATH, GODOT_VARIANT_TYPE_RID, GODOT_VARIANT_TYPE_OBJECT, GODOT_VARIANT_TYPE_INPUT_EVENT, GODOT_VARIANT_TYPE_DICTIONARY, GODOT_VARIANT_TYPE_ARRAY, GODOT_VARIANT_TYPE_POOL_BYTE_ARRAY, GODOT_VARIANT_TYPE_POOL_INT_ARRAY, GODOT_VARIANT_TYPE_POOL_REAL_ARRAY, GODOT_VARIANT_TYPE_POOL_STRING_ARRAY, GODOT_VARIANT_TYPE_POOL_VECTOR2_ARRAY, GODOT_VARIANT_TYPE_POOL_VECTOR3_ARRAY, GODOT_VARIANT_TYPE_POOL_COLOR_ARRAY} godot_variant_type;