pythonscript/gdnative.pxd


    cdef enum godot_variant_type:
        GODOT_VARIANT_TYPE_NIL
        GODOT_VARIANT_TYPE_BOOL
        GODOT_VARIANT_TYPE_INT
        GODOT_VARIANT_TYPE_REAL
        GODOT_VARIANT_TYPE_STRING
        GODOT_VARIANT_TYPE_VECTOR2
        GODOT_VARIANT_TYPE_RECT2
        GODOT_VARIANT_TYPE_VECTOR3
        GODOT_VARIANT_TYPE_TRANSFORM2D
        GODOT_VARIANT_TYPE_PLANE
        GODOT_VARIANT_TYPE_QUAT
        GODOT_VARIANT_TYPE_AABB
        GODOT_VARIANT_TYPE_BASIS
        GODOT_VARIANT_TYPE_TRANSFORM
        GODOT_VARIANT_TYPE_COLOR
        GODOT_VARIANT_TYPE_NODE_PATH
        GODOT_VARIANT_TYPE_RID
        GODOT_VARIANT_TYPE_OBJECT
        GODOT_VARIANT_TYPE_DICTIONARY
        GODOT_VARIANT_TYPE_ARRAY
        GODOT_VARIANT_TYPE_POOL_BYTE_ARRAY
        GODOT_VARIANT_TYPE_POOL_INT_ARRAY
        GODOT_VARIANT_TYPE_POOL_REAL_ARRAY
        GODOT_VARIANT_TYPE_POOL_STRING_ARRAY
        GODOT_VARIANT_TYPE_POOL_VECTOR2_ARRAY
        GODOT_VARIANT_TYPE_POOL_VECTOR3_ARRAY
        GODOT_VARIANT_TYPE_POOL_COLOR_ARRAY

    cdef enum godot_variant_call_error_error:
        GODOT_CALL_ERROR_CALL_OK
        GODOT_CALL_ERROR_CALL_ERROR_INVALID_METHOD
        GODOT_CALL_ERROR_CALL_ERROR_INVALID_ARGUMENT
        GODOT_CALL_ERROR_CALL_ERROR_TOO_MANY_ARGUMENTS
        GODOT_CALL_ERROR_CALL_ERROR_TOO_FEW_ARGUMENTS
        GODOT_CALL_ERROR_CALL_ERROR_INSTANCE_IS_NULL

    cdef struct godot_variant_call_error:
        godot_variant_call_error_error error
        int argument
        godot_variant_type expected

    cdef enum godot_variant_operator:
        GODOT_VARIANT_OP_EQUAL
        GODOT_VARIANT_OP_NOT_EQUAL
        GODOT_VARIANT_OP_LESS
        GODOT_VARIANT_OP_LESS_EQUAL
        GODOT_VARIANT_OP_GREATER
        GODOT_VARIANT_OP_GREATER_EQUAL
        GODOT_VARIANT_OP_ADD
        GODOT_VARIANT_OP_SUBTRACT
        GODOT_VARIANT_OP_MULTIPLY
        GODOT_VARIANT_OP_DIVIDE
        GODOT_VARIANT_OP_NEGATE
        GODOT_VARIANT_OP_POSITIVE
        GODOT_VARIANT_OP_MODULE
        GODOT_VARIANT_OP_STRING_CONCAT
        GODOT_VARIANT_OP_SHIFT_LEFT
        GODOT_VARIANT_OP_SHIFT_RIGHT
        GODOT_VARIANT_OP_BIT_AND
        GODOT_VARIANT_OP_BIT_OR
        GODOT_VARIANT_OP_BIT_XOR
        GODOT_VARIANT_OP_BIT_NEGATE
        GODOT_VARIANT_OP_AND
        GODOT_VARIANT_OP_OR
        GODOT_VARIANT_OP_XOR
        GODOT_VARIANT_OP_NOT
        GODOT_VARIANT_OP_IN
        GODOT_VARIANT_OP_MAX

    ctypedef struct godot_aabb:
        uint8_t _dont_touch_that[24]

    ctypedef struct godot_plane:
        uint8_t _dont_touch_that[16]

    void godot_plane_new_with_reals(godot_plane* r_dest, godot_real p_a, godot_real p_b, godot_real p_c, godot_real p_d)

    void godot_plane_new_with_vectors(godot_plane* r_dest, godot_vector3* p_v1, godot_vector3* p_v2, godot_vector3* p_v3)

    void godot_plane_new_with_normal(godot_plane* r_dest, godot_vector3* p_normal, godot_real p_d)

    godot_string godot_plane_as_string(godot_plane* p_self)

    godot_plane godot_plane_normalized(godot_plane* p_self)

    godot_vector3 godot_plane_center(godot_plane* p_self)

    godot_vector3 godot_plane_get_any_point(godot_plane* p_self)

    godot_bool godot_plane_is_point_over(godot_plane* p_self, godot_vector3* p_point)

    godot_real godot_plane_distance_to(godot_plane* p_self, godot_vector3* p_point)

    godot_bool godot_plane_has_point(godot_plane* p_self, godot_vector3* p_point, godot_real p_epsilon)

    godot_vector3 godot_plane_project(godot_plane* p_self, godot_vector3* p_point)

    godot_bool godot_plane_intersect_3(godot_plane* p_self, godot_vector3* r_dest, godot_plane* p_b, godot_plane* p_c)

    godot_bool godot_plane_intersects_ray(godot_plane* p_self, godot_vector3* r_dest, godot_vector3* p_from, godot_vector3* p_dir)

    godot_bool godot_plane_intersects_segment(godot_plane* p_self, godot_vector3* r_dest, godot_vector3* p_begin, godot_vector3* p_end)

    godot_plane godot_plane_operator_neg(godot_plane* p_self)

    godot_bool godot_plane_operator_equal(godot_plane* p_self, godot_plane* p_b)

    void godot_plane_set_normal(godot_plane* p_self, godot_vector3* p_normal)

    godot_vector3 godot_plane_get_normal(godot_plane* p_self)

    godot_real godot_plane_get_d(godot_plane* p_self)

    void godot_plane_set_d(godot_plane* p_self, godot_real p_d)

    void godot_aabb_new(godot_aabb* r_dest, godot_vector3* p_pos, godot_vector3* p_size)

    godot_vector3 godot_aabb_get_position(godot_aabb* p_self)

    void godot_aabb_set_position(godot_aabb* p_self, godot_vector3* p_v)

    godot_vector3 godot_aabb_get_size(godot_aabb* p_self)

    void godot_aabb_set_size(godot_aabb* p_self, godot_vector3* p_v)

    godot_string godot_aabb_as_string(godot_aabb* p_self)

    godot_real godot_aabb_get_area(godot_aabb* p_self)

    godot_bool godot_aabb_has_no_area(godot_aabb* p_self)

    godot_bool godot_aabb_has_no_surface(godot_aabb* p_self)

    godot_bool godot_aabb_intersects(godot_aabb* p_self, godot_aabb* p_with)

    godot_bool godot_aabb_encloses(godot_aabb* p_self, godot_aabb* p_with)

    godot_aabb godot_aabb_merge(godot_aabb* p_self, godot_aabb* p_with)

    godot_aabb godot_aabb_intersection(godot_aabb* p_self, godot_aabb* p_with)

    godot_bool godot_aabb_intersects_plane(godot_aabb* p_self, godot_plane* p_plane)

    godot_bool godot_aabb_intersects_segment(godot_aabb* p_self, godot_vector3* p_from, godot_vector3* p_to)

    godot_bool godot_aabb_has_point(godot_aabb* p_self, godot_vector3* p_point)

    godot_vector3 godot_aabb_get_support(godot_aabb* p_self, godot_vector3* p_dir)

    godot_vector3 godot_aabb_get_longest_axis(godot_aabb* p_self)

    godot_int godot_aabb_get_longest_axis_index(godot_aabb* p_self)

    godot_real godot_aabb_get_longest_axis_size(godot_aabb* p_self)

    godot_vector3 godot_aabb_get_shortest_axis(godot_aabb* p_self)

    godot_int godot_aabb_get_shortest_axis_index(godot_aabb* p_self)

    godot_real godot_aabb_get_shortest_axis_size(godot_aabb* p_self)

    godot_aabb godot_aabb_expand(godot_aabb* p_self, godot_vector3* p_to_point)

    godot_aabb godot_aabb_grow(godot_aabb* p_self, godot_real p_by)

    godot_vector3 godot_aabb_get_endpoint(godot_aabb* p_self, godot_int p_idx)

    godot_bool godot_aabb_operator_equal(godot_aabb* p_self, godot_aabb* p_b)

    ctypedef struct godot_dictionary:
        uint8_t _dont_touch_that[sizeof(void *)]

    void godot_dictionary_new(godot_dictionary* r_dest)

    void godot_dictionary_new_copy(godot_dictionary* r_dest, godot_dictionary* p_src)

    void godot_dictionary_destroy(godot_dictionary* p_self)

    godot_int godot_dictionary_size(godot_dictionary* p_self)

    godot_bool godot_dictionary_empty(godot_dictionary* p_self)

    void godot_dictionary_clear(godot_dictionary* p_self)

    godot_bool godot_dictionary_has(godot_dictionary* p_self, godot_variant* p_key)

    godot_bool godot_dictionary_has_all(godot_dictionary* p_self, godot_array* p_keys)

    void godot_dictionary_erase(godot_dictionary* p_self, godot_variant* p_key)

    godot_int godot_dictionary_hash(godot_dictionary* p_self)

    godot_array godot_dictionary_keys(godot_dictionary* p_self)

    godot_array godot_dictionary_values(godot_dictionary* p_self)

    godot_variant godot_dictionary_get(godot_dictionary* p_self, godot_variant* p_key)

    void godot_dictionary_set(godot_dictionary* p_self, godot_variant* p_key, godot_variant* p_value)

    godot_variant* godot_dictionary_operator_index(godot_dictionary* p_self, godot_variant* p_key)

    godot_variant* godot_dictionary_operator_index_const(godot_dictionary* p_self, godot_variant* p_key)

    godot_variant* godot_dictionary_next(godot_dictionary* p_self, godot_variant* p_key)

    godot_bool godot_dictionary_operator_equal(godot_dictionary* p_self, godot_dictionary* p_b)

    godot_string godot_dictionary_to_json(godot_dictionary* p_self)

    godot_bool godot_dictionary_erase_with_return(godot_dictionary* p_self, godot_variant* p_key)

    ctypedef struct godot_node_path:
        uint8_t _dont_touch_that[sizeof(void *)]

    void godot_node_path_new(godot_node_path* r_dest, godot_string* p_from)

    void godot_node_path_new_copy(godot_node_path* r_dest, godot_node_path* p_src)

    void godot_node_path_destroy(godot_node_path* p_self)

    godot_string godot_node_path_as_string(godot_node_path* p_self)

    godot_bool godot_node_path_is_absolute(godot_node_path* p_self)

    godot_int godot_node_path_get_name_count(godot_node_path* p_self)

    godot_string godot_node_path_get_name(godot_node_path* p_self, godot_int p_idx)

    godot_int godot_node_path_get_subname_count(godot_node_path* p_self)

    godot_string godot_node_path_get_subname(godot_node_path* p_self, godot_int p_idx)

    godot_string godot_node_path_get_concatenated_subnames(godot_node_path* p_self)

    godot_bool godot_node_path_is_empty(godot_node_path* p_self)

    godot_bool godot_node_path_operator_equal(godot_node_path* p_self, godot_node_path* p_b)

    godot_node_path godot_node_path_get_as_property_path(godot_node_path* p_self)

    cdef struct godot_rect2:
        uint8_t _dont_touch_that[16]

    void godot_rect2_new_with_position_and_size(godot_rect2* r_dest, godot_vector2* p_pos, godot_vector2* p_size)

    void godot_rect2_new(godot_rect2* r_dest, godot_real p_x, godot_real p_y, godot_real p_width, godot_real p_height)

    godot_string godot_rect2_as_string(godot_rect2* p_self)

    godot_real godot_rect2_get_area(godot_rect2* p_self)

    godot_bool godot_rect2_intersects(godot_rect2* p_self, godot_rect2* p_b)

    godot_bool godot_rect2_encloses(godot_rect2* p_self, godot_rect2* p_b)

    godot_bool godot_rect2_has_no_area(godot_rect2* p_self)

    godot_rect2 godot_rect2_clip(godot_rect2* p_self, godot_rect2* p_b)

    godot_rect2 godot_rect2_merge(godot_rect2* p_self, godot_rect2* p_b)

    godot_bool godot_rect2_has_point(godot_rect2* p_self, godot_vector2* p_point)

    godot_rect2 godot_rect2_grow(godot_rect2* p_self, godot_real p_by)

    godot_rect2 godot_rect2_grow_individual(godot_rect2* p_self, godot_real p_left, godot_real p_top, godot_real p_right, godot_real p_bottom)

    godot_rect2 godot_rect2_grow_margin(godot_rect2* p_self, godot_int p_margin, godot_real p_by)

    godot_rect2 godot_rect2_abs(godot_rect2* p_self)

    godot_rect2 godot_rect2_expand(godot_rect2* p_self, godot_vector2* p_to)

    godot_bool godot_rect2_operator_equal(godot_rect2* p_self, godot_rect2* p_b)

    godot_vector2 godot_rect2_get_position(godot_rect2* p_self)

    godot_vector2 godot_rect2_get_size(godot_rect2* p_self)

    void godot_rect2_set_position(godot_rect2* p_self, godot_vector2* p_pos)

    void godot_rect2_set_size(godot_rect2* p_self, godot_vector2* p_size)

    ctypedef struct godot_rid:
        uint8_t _dont_touch_that[sizeof(void *)]

    void godot_rid_new(godot_rid* r_dest)

    godot_int godot_rid_get_id(godot_rid* p_self)

    void godot_rid_new_with_resource(godot_rid* r_dest, godot_object* p_from)

    godot_bool godot_rid_operator_equal(godot_rid* p_self, godot_rid* p_b)

    godot_bool godot_rid_operator_less(godot_rid* p_self, godot_rid* p_b)

    ctypedef struct godot_transform:
        uint8_t _dont_touch_that[48]

    void godot_transform_new_with_axis_origin(godot_transform* r_dest, godot_vector3* p_x_axis, godot_vector3* p_y_axis, godot_vector3* p_z_axis, godot_vector3* p_origin)

    void godot_transform_new(godot_transform* r_dest, godot_basis* p_basis, godot_vector3* p_origin)

    void godot_transform_new_with_quat(godot_transform* r_dest, godot_quat* p_quat)

    godot_basis godot_transform_get_basis(godot_transform* p_self)

    void godot_transform_set_basis(godot_transform* p_self, godot_basis* p_v)

    godot_vector3 godot_transform_get_origin(godot_transform* p_self)

    void godot_transform_set_origin(godot_transform* p_self, godot_vector3* p_v)

    godot_string godot_transform_as_string(godot_transform* p_self)

    godot_transform godot_transform_inverse(godot_transform* p_self)
